project(ARPGT1 C CXX)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
aux_source_directory(GamePlay SRC_LIST)
aux_source_directory(GamePlay/Skills SRC_LIST)
aux_source_directory(Graphics SRC_LIST)
aux_source_directory(Physics SRC_LIST)
aux_source_directory(Tests SRC_LIST)
aux_source_directory(Utility SRC_LIST)
aux_source_directory(ECS SRC_LIST)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
include_directories(${CMAKE_SOURCE_DIR})
find_package(Threads REQUIRED)
find_package(Lua51 REQUIRED)
include_directories(${LUA_INCLUDE_DIR})
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${PROJECT_NAME} Irrlicht)
target_link_libraries(${PROJECT_NAME} lua5.1)

