project(ARPGT1 C CXX)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
aux_source_directory(gameplay SRC_LIST)
aux_source_directory(gameplay/skills SRC_LIST)
aux_source_directory(graphics SRC_LIST)
aux_source_directory(physics SRC_LIST)
aux_source_directory(tests SRC_LIST)
aux_source_directory(utility SRC_LIST)
aux_source_directory(ecs SRC_LIST)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -O3 -DNDEBUG -flto")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
include_directories(${CMAKE_SOURCE_DIR})
find_package(Threads REQUIRED)
find_package(Lua51 REQUIRED)
include_directories(${LUA_INCLUDE_DIR})
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${PROJECT_NAME} Irrlicht)
target_link_libraries(${PROJECT_NAME} lua5.1)

if(${CMAKE_BINARY_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
else()
    execute_process(COMMAND ln -s -t ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/art)
    execute_process(COMMAND ln -s -t ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/data)
endif()
